fixed the bug where the new lines of the saved noteBody were not properly displayed. Achieved this by adding white-space: pre-wrap; to the read-note-area p element.

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -96,6 +96,9 @@ button {
 .read-note-area button {
   margin: 20px;
 }
+.read-note-area p {
+  white-space: pre-wrap;
+}
 
 .main {
   display: flex;
